# abstraction

./: .coverage  .gitignore  BUILD_PYAPP.md  CONTRIBUTING.md  GH_RELEASE_NOTES_v1.0.0.md  Makefile  QUICKSTART.md  README.md  RELEASE_NOTES_v1.0.0.md  TEST_COVERAGE.md  abstraction  coverage.xml  download_model.py  pyproject.toml  requirements.txt  test_firewall_simple.py  test_mcp.py
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md  question.md
.github/workflows/: build-and-test.yml
config/: config.yaml
scripts/: build.sh  build_fixed.sh  clean.sh  run.sh
src/: __init__.py  main.py
src/agents/: __init__.py  model_loader.py
src/gui/: __init__.py  __main__.py  main_window.py
src/gui/components/: settings_dialog.py
src/gui/themes/: theme_manager.py
src/gui/widgets/: chat_widget.py  monitoring_widget.py
src/mcp/: __init__.py  firewall.py  mcp_client.py  mcp_server.py
src/memory/: __init__.py  cache_manager.py
src/nodes/: __init__.py  agent_node.py  graph.py  human_approval_node.py  reasoning_node.py  state.py
src/tools/: __init__.py  accounting_tools.py  base.py  coding_tools.py  web_tools.py  writing_tools.py
tests/: test_accounting_tools.py  test_coding_tools.py  test_firewall.py  test_firewall_simple.py  test_mcp.py  test_mcp_integration.py  test_mcp_server.py  test_memory.py  test_tool_registry.py  test_tools.py  test_tools_registration.py  test_web_tools.py  test_writing_tools.py
tests/fixtures/: dummy_mcp_server.py
